Add gitignore entry for markdown plugin

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,4 @@ fabric.properties
 resources/
 .idea/markdown-navigator.xml
 .idea/markdown-navigator/profiles_settings.xml
+markdown-exported-files.xml
