--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,4 @@ resources/
 .idea/markdown-navigator.xml
 .idea/markdown-navigator/profiles_settings.xml
 markdown-exported-files.xml
+**/.checkpoints/
